tests/pass/test-hello.mc
int main()
{
  printf("%d\n", 42);
  printf("%d\n", 71);
  printf("%d\n", 1);
  return 0;
}
